[gd_scene load_steps=7 format=3 uid="uid://bf4rmnun1yr2n"]

[ext_resource type="Script" path="res://various/rotation_basic.gd" id="1_owebi"]
[ext_resource type="PackedScene" uid="uid://8pengjsakrxj" path="res://addons/godot_play_tool/helper/helper_reticle.tscn" id="2_t7dku"]
[ext_resource type="PackedScene" uid="uid://bj2i1q1ilr6ld" path="res://addons/godot_play_tool/helper/helper_move2center.tscn" id="3_vhcys"]
[ext_resource type="PackedScene" uid="uid://ljh7garocuhe" path="res://addons/godot_play_tool/helper/helper_point.tscn" id="4_d2nhg"]
[ext_resource type="PackedScene" uid="uid://sdvpesfvson2" path="res://addons/godot_play_tool/helper/helper_drag.tscn" id="5_iblyf"]
[ext_resource type="PackedScene" uid="uid://cmqwendenqxuy" path="res://addons/godot_play_tool/helper/helper_line.tscn" id="6_nq6dh"]

[node name="RotationBasic" type="Node2D"]
script = ExtResource("1_owebi")

[node name="Center" parent="." instance=ExtResource("2_t7dku")]
z_index = 4096

[node name="helper_move2center" parent="Center" instance=ExtResource("3_vhcys")]

[node name="PivotRotator" parent="." instance=ExtResource("4_d2nhg")]
z_index = 4096
position = Vector2(870, 162)
metadata/_edit_group_ = true

[node name="helper_drag" parent="PivotRotator" instance=ExtResource("5_iblyf")]
rect = Rect2(-25, -25, 50, 50)

[node name="P" type="Label" parent="PivotRotator"]
offset_left = 29.0
offset_top = -25.0
offset_right = 318.0
offset_bottom = -2.0
text = "Test"

[node name="T" type="Label" parent="PivotRotator"]
offset_left = -290.0
offset_top = -25.0
offset_right = -29.0
offset_bottom = -2.0
text = "Test"
horizontal_alignment = 2

[node name="S" type="Label" parent="PivotRotator"]
offset_left = -78.0
offset_top = 28.0
offset_right = 79.0
offset_bottom = 51.0
text = "Test"
horizontal_alignment = 1

[node name="TrackerRotator" parent="." instance=ExtResource("4_d2nhg")]
z_index = 4096
position = Vector2(623, 527)
metadata/_edit_group_ = true

[node name="helper_drag" parent="TrackerRotator" instance=ExtResource("5_iblyf")]
rect = Rect2(-25, -25, 50, 50)

[node name="Pivot" parent="." instance=ExtResource("6_nq6dh")]
color = Color(0.712129, 0.712129, 0.712129, 1)
point_end = Vector2(100, 0)
line_width = 3
metadata/_edit_group_ = true

[node name="helper_move2center" parent="Pivot" instance=ExtResource("3_vhcys")]

[node name="Tracker" parent="." instance=ExtResource("6_nq6dh")]
rotation = 1.5708
point_end = Vector2(100, 0)
line_width = 3
metadata/_edit_group_ = true

[node name="helper_move2center" parent="Tracker" instance=ExtResource("3_vhcys")]
